# lc-qb-agent

./: .env.example  README.md  alembic.ini  main.py  pyproject.toml
.github/: copilot-instructions.md
alembic/: env.py
alembic/versions/: 3720783b8af9_unify_base_and_add_answer_constraints.py  8006ef3d0b63_create_grammar_table.py
app/: main.py
app/agent/: evaluation_agent.py  prompts.py  qb_agent.py
app/db/: database.py  repository.py
app/models/: qb_comprehension.py  qb_grammar.py
app/routes/: audio_routes.py  comprehension_passage_routes.py  evaluation_routes.py  qb_routes.py  questions_routes.py
app/services/: evaluation_service.py  qb_service.py  tts_service.py
app/tools/: comprehension_tool.py  grammar_evaluation_tool.py  grammar_tool.py  validate_question_quality_tool.py
reference/: 3.1-speech-to-text-whisper.md  3.2-text-to-speech.md  3.3-pronunciation-assessment.md  3.4-audio-agent.md  ARCHITECTURE_DIAGRAM.md  EVALUATION_AGENT_API.md  EVALUATION_AGENT_IMPLEMENTATION.md  EVALUATION_AGENT_QUICKSTART.md  architecture.md  db-implementation.md  speech-to-text-implementation.md  todos.md
